--- a/index.html
+++ b/index.html
@@ -3,53 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jekyll Site Builder</title>
+  <title>Jekyll Site Builder Pro</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Jekyll Site Builder</h1>
-    <p>Build your SEO-friendly GitHub site in seconds!</p>
+    <h1>Jekyll Site Builder Pro</h1>
+    <p>Design, Customize & Export Jekyll Sites Instantly</p>
   </header>
 
+  <section class="setup-section">
+    <h2>Site Configuration</h2>
+    <label>Title: <input type="text" id="siteTitle" placeholder="My Awesome Site" /></label>
+    <label>Description: <input type="text" id="siteDesc" placeholder="A GitHub-powered static site" /></label>
+    <label>Author: <input type="text" id="siteAuthor" placeholder="Your Name" /></label>
+    <label>Base URL: <input type="text" id="siteBaseurl" placeholder="" /></label>
+    <label>URL: <input type="text" id="siteUrl" placeholder="https://username.github.io" /></label>
+  </section>
+
   <section class="theme-section">
-    <label for="theme">Select Theme:</label>
-    <select id="theme" onchange="loadTheme()">
-      <option value="blog">Blog Theme</option>
-      <option value="portfolio">Portfolio Theme</option>
+    <h2>Select Theme</h2>
+    <select id="themeSelector" onchange="loadProTheme()">
+      <option value="blog">Blog (Light)</option>
+      <option value="blog-dark">Blog (Dark)</option>
+      <option value="portfolio">Portfolio</option>
+      <option value="docs">Docs</option>
+      <option value="resume">Resume</option>
     </select>
   </section>
 
-  <main class="editor-grid">
-    <div class="editor">
-      <h2>_config.yml</h2>
-      <textarea id="configEditor"></textarea>
-
-      <h2>index.md</h2>
-      <textarea id="indexEditor"></textarea>
-
-      <h2>about.md</h2>
-      <textarea id="aboutEditor"></textarea>
-
-      <h2>First Post (Markdown)</h2>
-      <textarea id="postEditor"></textarea>
-
-      <h2>style.css</h2>
-      <textarea id="styleEditor"></textarea>
-
-      <button onclick="downloadSite()">Download GitHub ZIP</button>
+  <section class="drag-editor">
+    <h2>Page Builder</h2>
+    <div id="blockContainer">
+      <!-- Dynamic blocks inserted here -->
     </div>
+    <button onclick="addBlock()">+ Add Block</button>
+  </section>
 
-    <div class="preview">
-      <h2>Live Markdown Preview</h2>
-      <iframe id="preview"></iframe>
-    </div>
-  </main>
+  <section class="custom-files">
+    <h2>Custom Files</h2>
+    <label>index.md</label>
+    <textarea id="indexEditor"></textarea>
+
+    <label>about.md</label>
+    <textarea id="aboutEditor"></textarea>
+
+    <label>style.css</label>
+    <textarea id="styleEditor"></textarea>
+  </section>
+
+  <section class="preview-section">
+    <h2>Live Preview</h2>
+    <iframe id="preview"></iframe>
+  </section>
+
+  <section class="actions">
+    <button onclick="downloadProSite()">Download GitHub ZIP</button>
+    <button onclick="saveLocal()">Save to Browser</button>
+    <button onclick="loadLocal()">Load Saved Version</button>
+  </section>
 
   <footer>
-    <p>Built with love for GitHub + Jekyll</p>
+    <p>Made for creators. Powered by GitHub + Jekyll.</p>
   </footer>
 
+  <!-- Required JS libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
   <script src="script.js"></script>
